<resources>
    <string name="app_name">ReCom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="camera">Камера</string>
    <string name="map">Карта</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="title_activity_maps_main">Map</string>
    <string name="open_map">Open Map</string>
    <string name="test">Test</string>
    <string name="title_activity_maps">Map</string>
    <string name="road_quality_checker">Road Quality Checker</string>
    <string name="send_a_complaint">Отправить жалобу</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration">Регистрация</string>
    <string name="Enter">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="email">Почта</string>
    <string name="title_activity_main1">Main1Activity</string>
    <string name="Profile">Профиль</string>
    <string name="Share">Поделится</string>
    <string name="new_statement">Новое заявление</string>
    <string name="Settings">Настройки</string>
    <string name="News">Новости</string>
    <string name="Rating">Рейтинг</string>
    <string name="Feedback">Обратная связь</string>
    <string name="Education">Обучение</string>
    <string name="Draft">Черновики</string>
    <string name="About">О приложении</string>
    <string name="Applications">Заявления</string>
    <string name="Achievements">Достижения</string>
    <string name="Confirm_password">Повторите пароль</string>
    <string name="Already_register">Уже зарегистрирован</string>
    <string name="Login">Логин</string>
    <string name="Points">Баллы</string>
    <string name="Rank">Звание</string>
    <string name="Exit">Выход</string>
    <string name="Application">Заявление</string>
    <string name="Address">Адрес</string>
    <string name="Type_of_problem">Тип проблемы</string>
    <string name="Add_photo">Добавить фото</string>
    <string name="Comment">Комментарий</string>
    <string name="Send">Отправить</string>
    <string name="In_developing">В разработке ...</string>
    <string name="MyApplications">Мои заявления</string>

    <string-array name="problemList">
        <item>Парковка</item>
        <item>Яма</item>
        <item>Знак</item>

    </string-array>

    <string-array name="problemParkingList">
        <item>Парковка вторым рядом</item>
        <item>Парковка под знаком "Остановка запрещена"</item>
        <item>Парковка на тротуаре</item>
        <item>Парковка на пешеходном переходе</item>
        <item>Парковка на месте для инвалидов</item>
    </string-array>

    <string-array name="problemPitList">
        <item>Разбитая дорога</item>
        <item>Яма на дороге</item>
        <item>Люк</item>
        <item>Рельсы</item>
        <item>Ремонт дороги</item>
    </string-array>

    <string-array name="problemSignList">
        <item>Плохо видно знак</item>
        <item>Упавший знак</item>
        <item>Стертая разметка</item>
        <item>Не видно светофор</item>
    </string-array>



</resources>
